@@ -1,3 +1,10 @@
+2012-03-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-group.el (gnus-group-expire-articles-1): Don't try to expire
+	messages that don't exist.
+
+	* gnus-sum.el (gnus-summary-expire-articles): Ditto.
+
 2012-03-04  Thierry Volpiatto  <thierry.volpiatto@gmail.com>
 
 	* gnus-msg.el (gnus-msg-mail): Call `message-mail' correctly when Gnus
